--- a/avance2-proyecto.Rmd
+++ b/avance2-proyecto.Rmd
@@ -12,6 +12,7 @@ header-includes:
   - \usepackage{multicol}
   - \usepackage{longtable}
   - \setlength{\columnsep}{1cm}
+  - \usepackage{enumitem}
 ---
 
 ```{r setup, include=FALSE}
@@ -125,7 +126,7 @@ En la Tabla 2 se presenta la consitución de la unidad de análisis de este estu
 
 \end{multicols}
 
-```{r tabla22, echo=FALSE, results='asis'}
+```{r tabla2, echo=FALSE, results='asis'}
 
 paises_por_region <- datos %>%
   select(Country, Region) %>%
@@ -170,6 +171,8 @@ Figura 1. Correlación lineal de Pearson índices.
 El análisis realizado incluye estadísticas descriptivas: medidas de tendencia central, dispersión y posición, correlación lineal de Pearson entre las variables cuantitativas y el índice total y comparación de medias para evaluar diferencias significativas entre regiones. Posteriormente, se emplearon métodos de análisis multivariado para explorar relaciones más complejas entre las variables, como el análisis de componentes principales (ACP) para identificar patrones latentes en los datos.
 
 Para la realización de las 3 pruebas de hipótesis presentadas en el estudio se realizó un muestreo aleatorio de las poblaciones corrrespondientes mediante la función sample para obtener muestras de 30 datos, asegurando que el tamaño de muestra sea grande (n >= 30) garantizando el cumplimiento del Teorema Central del Límite [3] para la realización de intérvalos de confianza y pruebas de hipótesis con resultados fidedignos.
+
+Finalmente se realizaron dos modelos de regresión lineal, uno simple y uno múltiple, donde mediante el coeficiente de correlación lineal de Pearson, coeficiente de determinación y gráficas de disperción y distribución se generó el modelo, se determinó su bondad y se verificaron los supuestos del mismo.
 
 ```{r muestras, echo=FALSE, include=FALSE}
 
@@ -227,7 +230,7 @@ dGrupo2 <- sd(muestra_grupo2)
 
 
 \section{Resultados}
-En la Tabla 2 se presentan las medidas de tendencia central y posición de las variables cuantitativas Índice Commerce, Research y Talent discriminadas de forma regional. 
+En la Tabla 3 se presentan las medidas de tendencia central y posición de las variables cuantitativas Índice Commerce, Research y Talent discriminadas de forma regional. 
 
 Para casi todos los casos, la medida de tendencia central moda presentó más de tres valores, lo cuál no brinda mucha información acerca de los datos. En el caso de la media y mediana en Americas y Middle East, todos los índices difieren drásticamente, lo cuál indica que la distribución de los datos no es normal. En el caso Asia-Pacific, para el indicador Research y Total Score hay una alta cercanía entre los indicadores, planteando la posibilidad de una distribución de campana, sin embargo esto debe ser confirmado gráficamente. Esto mismo ocurre para Europe con todos los indicadores, y en el caso del indicador Commerce hay una moda única que también es significativamente cercana a la media y mediana. Finalmente para Africa se presenta una alta cercanía de la mediana y la media en los índices Commerce, Talent y Research.
 
@@ -235,7 +238,7 @@ El mínimo en todas las regiones para todos los ídices es menor a 10, excepto T
 
 \end{multicols}
 
-```{r tabla2, echo=FALSE, results='asis'}
+```{r tabla3, echo=FALSE, results='asis'}
 
 # Cálculo de las estadísticas
 custom_stats_region <- function(df, var, total_score) {
@@ -324,7 +327,7 @@ cat("\\renewcommand{\\arraystretch}{1}\n")
 
 \begin{multicols}{2}
 
-En la Tabla 3 se presentan las medidas de disperción, covarianza y correlación lineal de Pearson con respecto al Total Score (AI Global Index) de las variables cuantitativas Índice Commerce, Research y Talent discriminadas de forma regional. 
+En la Tabla 4 se presentan las medidas de disperción, covarianza y correlación lineal de Pearson con respecto al Total Score (AI Global Index) de las variables cuantitativas Índice Commerce, Research y Talent discriminadas de forma regional. 
 
 Americas presentan los rangos más amplios de todas las regiones que van desde 86.73 en Total Score hasta 100 en Research, para Asia-Pacific, Europe y Middle East, los rangos de los diferentes índices varían alrededor de 20 y 40 indicando menor variablidad de los datos con excepciones de los índices Research y Total Score de Asia-Pacific con 71.30 y  62.92 respectivamente. En el caso de Africa se presentan los rangos más bajos donde todos están por debajo de 10, lo cuál sugiere que los datos en la región se distribuyen de manera compacta.
 
@@ -335,7 +338,7 @@ En el caso de la covarianza, esta es positiva para todas las variables, lo cuál
 
 \end{multicols}
 
-```{r tabla3, echo=FALSE, results='asis'}
+```{r tabla4, echo=FALSE, results='asis'}
 
 # Cálculo de las estadísticas
 tabla3 <- region_stats %>% 
@@ -364,11 +367,11 @@ cat("\\renewcommand{\\arraystretch}{1}\n")
 
 El indicador Commerce evalúa la capacidad de los países para convertir el conocimiento de IA en aplicaciones comerciales y soluciones de mercado. La Tabla 4 presenta la distribución global de este indicador en intervalos de 10 puntos, mostrando las frecuencias absolutas y relativas de países en cada rango. Este análisis es clave para identificar las economías líderes en la comercialización de tecnologías de IA y qué regiones necesitan fortalecer sus ecosistemas de innovación empresarial.
 
-La Tabla 4 revela una concentración extrema en la capacidad comercial, con más del 65\% de los países ubicados por debajo de los 20 puntos (F.Rel.A = 0.65). Solo un pequeño grupo de naciones, liderado por Estados Unidos (100 puntos), supera los 80 puntos, demostrando su dominio en la transformación de investigación en productos comerciales. Los resultados destacan la brecha entre los polos tecnológicos consolidados y el resto del mundo, particularmente en regiones como África y Latinoamérica.
+La Tabla 5 revela una concentración extrema en la capacidad comercial, con más del 65\% de los países ubicados por debajo de los 20 puntos (F.Rel.A = 0.65). Solo un pequeño grupo de naciones, liderado por Estados Unidos (100 puntos), supera los 80 puntos, demostrando su dominio en la transformación de investigación en productos comerciales. Los resultados destacan la brecha entre los polos tecnológicos consolidados y el resto del mundo, particularmente en regiones como África y Latinoamérica.
 
 \end{multicols}
 
-```{r tabla4, echo=FALSE}
+```{r tabla5, echo=FALSE}
 # Crear intervalos para la variable Commercial
 intervalos <- cut(datos$Commercial, breaks = seq(0, 100, by = 10), 
                   include.lowest = TRUE, right = TRUE)
@@ -390,57 +393,50 @@ tabla_frecuencias_commercial <- data.frame(
 
 # Mostrar la tabla con knitr::kable
 knitr::kable(tabla_frecuencias_commercial, 
-             caption = "Frecuencia del Índice Commercial",
+             caption = "Frecuencia del Índice Commerce",
              align = c('l', 'c', 'c', 'c', 'c'))
 
 ```
 
 \begin{multicols}{2}
 
-En la Tabla 5 se presentan las frecuencias bivariadas del indice Commerce y el índice Total Score. En esta se puede apreciar como hay una alta concentración de los datos en la parte superior izquierda de la tabla, donde se indica que 55 de los 62 datos con un Índice Commerce entre 0 y 10 presentan un Total Score menor o igual a 40.
+En la Tabla 6 se presentan las frecuencias bivariadas del índice Commerce y la Región. En esta se puede apreciar como hay una alta concentración de los datos (45 de los 62 países) en el rango de 0 a 5, indicando resultados muy bajos para la mayoría de países en este índice. En este rango se encuentran la totalidad de los países de Africa.
 
-60 de los 62 datos de los diferentes países presentan un Índice Commerce menor o igual a 30, indicando que la inversión e iniciativas comerciales de Inteligencia Artificial en el 96\% de los países estudiados es baja.
-
-Hay un dato con un Índice Commerce entre 40 y 50 con un total score correspondiente en el rango de 60 y 70. El último dato presenta un Índice Commerce entre 90 y 100 y un Total Score entre 90 y 100, planteando claramente la presencia de un dato atípico por su gran lejanía de los demás datos obtenidos de los países estudiados.
+En el rango de 5 a 30 se concentra la siguiente porción más significativa de los datos (15 países), en este rango se encuentran casi la totalidad de los países restantes todas las regiones con excepción de dos datos provenientes de Estados Unidos de la región Americas con un puntaje entre 95 y 100 y China de Asia-Pacific con un puntaje entre 40 y 45. Estos resultados indican que la mayoría de países se encuentran rezagados en la generación de aplicaciones prácticas de mercado de Inteligencia artificial y hay solo dos países liderando la producción de iniciativas comerciales.
 
 \end{multicols}
 
-```{r tabla5, echo=FALSE, results='asis'}
+```{r tabla6, echo=FALSE, results='asis'}
 
-#Generación de la tabla
-crear_intervalos <- function(data, variable, n_bins = 8) {
-  breaks <- pretty(range(data[[variable]], na.rm = TRUE), n = n_bins)
-  return(breaks)
-}
-commerce_breaks <- crear_intervalos(datos, "Commercial")
-total_score_breaks <- crear_intervalos(datos, "Total.score")
-commerce_labels <- paste0("(", commerce_breaks[-length(commerce_breaks)], ", ", commerce_breaks[-1], "]")
-score_labels <- paste0("(", total_score_breaks[-length(total_score_breaks)], ", ", total_score_breaks[-1], "]")
-datos$Commercial_interval <- cut(datos$Commercial, 
-                                breaks = commerce_breaks, 
-                                labels = commerce_labels, 
-                                include.lowest = TRUE)
-datos$TotalScore_interval <- cut(datos$Total.score, 
-                                breaks = total_score_breaks, 
-                                labels = score_labels, 
-                                include.lowest = TRUE)
-tabla_contingencia <- table(datos$Commercial_interval, datos$TotalScore_interval)
-tabla_df <- as.data.frame.matrix(tabla_contingencia)
-tabla_df$Total <- rowSums(tabla_df)
-totales_columna <- colSums(tabla_df)
-tabla_df <- rbind(tabla_df, Total = totales_columna)
-tabla4 <- tabla_df %>%
-  tibble::rownames_to_column(var = "A  -   B") %>%
-  dplyr::rename(`A - B` = `A  -   B`) %>% 
-  dplyr::select(`A - B`, everything()) 
+breaks_commerce <- c(0, 5, 10, 15, 20, 25, 30, 40, 45, 95, 100)
+labels_commerce <- c("[0, 5]", "(5, 10]", "(10, 15]", "(15, 20]", "(20, 25]", 
+                     "(25, 30]", "(30, 40]", "(40, 45]", "(45, 95]", "(95, 100]")
 
-colnames(tabla4) <- c("A   -   B", "[0, 10]", "(10, 20]", "(20, 30]", "(30, 40]", "(40, 50]", 
-                      "(50, 60]", "(60, 70]", "(70, 80]", "(80, 90]", "(90, 100]", "Total")
+datos$Commerce_interval_new <- cut(datos$Commercial, 
+                                  breaks = breaks_commerce, 
+                                  labels = labels_commerce, 
+                                  include.lowest = TRUE,
+                                  right = TRUE)
 
+tabla_contingencia_invertida <- table(datos$Region, datos$Commerce_interval_new)
+tabla_df_invertida <- as.data.frame.matrix(tabla_contingencia_invertida)
+
+tabla_df_invertida$Total <- rowSums(tabla_df_invertida)
+
+totales_columna_invertida <- colSums(tabla_df_invertida)
+tabla_df_invertida <- rbind(tabla_df_invertida, Total = totales_columna_invertida)
+
+tabla_invertida <- tabla_df_invertida %>%
+  tibble::rownames_to_column(var = "Region\\Commerce") %>%
+  dplyr::select(`Region\\Commerce`, everything())
+
+colnames(tabla_invertida)[1] <- "Region - Commerce"
+
+# Ajuste del diseño de la tabla
 cat("\\renewcommand{\\arraystretch}{1.3}\n")
 cat("\\begin{scriptsize}")
-print(xtable::xtable(tabla4, 
-                   caption = "Tabla de Frecuencia Bivariada Índice Commerce (A) vs Total Score (B)"),
+print(xtable::xtable(tabla_invertida, 
+                     caption = "Tabla de Frecuencia Bivariada Región vs Índice Commerce"),
       tabular.environment = "longtable",
       floating = FALSE,
       include.rownames = FALSE,
@@ -448,6 +444,7 @@ print(xtable::xtable(tabla4,
       caption.placement = "top")
 cat("\\end{scriptsize}")
 cat("\\renewcommand{\\arraystretch}{1}\n")
+
 ```
 
 \begin{multicols}{2}
@@ -636,13 +633,13 @@ Figura 4. Distribución cajas y bigoes del Índice Commerce agrupado por Región
 
 \subsection{Índice Research}
 
-El indicador Research mide la producción científica y capacidad investigadora en inteligencia artificial, siendo un predictor clave del desarrollo tecnológico futuro. La Tabla 6 presenta su distribución global mediante frecuencias absolutas y relativas, permitiendo identificar los patrones de concentración del conocimiento especializado. Este análisis es fundamental para comprender qué países están liderando la generación de nuevo conocimiento en IA y qué regiones requieren fortalecer sus sistemas de investigación.
+El indicador Research mide la producción científica y capacidad investigadora en inteligencia artificial, siendo un predictor clave del desarrollo tecnológico futuro. La Tabla 7 presenta su distribución global mediante frecuencias absolutas y relativas, permitiendo identificar los patrones de concentración del conocimiento especializado. Este análisis es fundamental para comprender qué países están liderando la generación de nuevo conocimiento en IA y qué regiones requieren fortalecer sus sistemas de investigación.
 
 Los resultados revelan una concentración extrema en la capacidad investigadora: mientras el 60\% de los países se ubica por debajo de los 30 puntos (F.Rel.Acum = 0.60), solo un selecto grupo (15\%) supera los 70 puntos. Estados Unidos (100 puntos) y China (71.42) dominan claramente los intervalos superiores. Sin embargo, destaca que varios países europeos (Reino Unido 36.5, Alemania 35.84) mantienen capacidades significativas. La presencia casi nula de países africanos y latinoamericanos por encima de los 20 puntos (F.Abs = 2) evidencia un riesgo crítico de dependencia tecnológica.
 
 \end{multicols}
 
-```{r tabla6, echo=FALSE}
+```{r tabla7, echo=FALSE}
 
 # Crear intervalos para la variable Research
 intervalos <- cut(datos$Research, breaks = seq(0, 100, by = 10), 
@@ -672,13 +669,13 @@ knitr::kable(tabla_frecuencias_research,
 
 \begin{multicols}{2}
 
-La Tabla 7 presenta la distribución conjunta entre el Índice Research (A) y el Total Score (B), ambos agrupados en intervalos. A partir de los datos se puede observar que las frecuencias más altas se concentran en los rangos bajos de ambas variables. Por ejemplo, el intervalo [0,10] del Índice Research presenta un total de 26 observaciones, siendo el más frecuente, y dentro de este, los valores más altos se cruzan con [10,20] (14 observaciones) y [0,10] (9 observaciones) del Total Score.
+La Tabla 8 presenta la distribución conjunta entre el Índice Research (A) y el Total Score (B), ambos agrupados en intervalos. A partir de los datos se puede observar que las frecuencias más altas se concentran en los rangos bajos de ambas variables. Por ejemplo, el intervalo [0,10] del Índice Research presenta un total de 26 observaciones, siendo el más frecuente, y dentro de este, los valores más altos se cruzan con [10,20] (14 observaciones) y [0,10] (9 observaciones) del Total Score.
 
 En contraste, a medida que aumentan los valores tanto del Índice Research como del Total Score, las frecuencias disminuyen significativamente, llegando incluso a ser cero en varios cruces. Esto sugiere que la mayoría de los datos se concentran en valores bajos de ambas variables.
 
 \end{multicols}
 
-```{r tabla7, echo=FALSE, results='asis'}
+```{r tabla8, echo=FALSE, results='asis'}
 
 #Generación de la tabla
 crear_intervalos <- function(data, variable, n_bins = 8) {
@@ -893,7 +890,7 @@ Figura 7. Distribución cajas y bigotes del Índice Research agrupado por Regió
 
 \subsection{Índice Talent}
 
-La Tabla 8 revela una distribución desigual del talento en IA a nivel mundial, con una marcada concentración en los extremos: mientras el 42\% de los países se ubica en el rango más bajo (0-20 puntos), solo un 18 pot ciento supera los 50 puntos. Las frecuencias acumuladas muestran que apenas el 30 por ciento de las naciones alcanza niveles competitivos (mayor igual a 40 puntos), destacando Estados Unidos (100 puntos) como caso excepcional. Esta polarización refleja brechas estructurales en la formación de profesionales calificados, donde economías desarrolladas capturan la mayor parte del talento global.
+La Tabla 9 revela una distribución desigual del talento en IA a nivel mundial, con una marcada concentración en los extremos: mientras el 42\% de los países se ubica en el rango más bajo (0-20 puntos), solo un 18 pot ciento supera los 50 puntos. Las frecuencias acumuladas muestran que apenas el 30 por ciento de las naciones alcanza niveles competitivos (mayor igual a 40 puntos), destacando Estados Unidos (100 puntos) como caso excepcional. Esta polarización refleja brechas estructurales en la formación de profesionales calificados, donde economías desarrolladas capturan la mayor parte del talento global.
 
 La Tabla 8 revela una fuerte desigualdad en la distribución global de talento en IA. Estados Unidos destaca como líder absoluto (100 puntos), mientras que más del 40 por ciento de los países se concentra en el nivel más bajo (0-20 puntos). Esta brecha refleja las profundas asimetrías en desarrollo tecnológico, donde solo un puñado de naciones concentra las capacidades avanzadas.
 
@@ -901,8 +898,7 @@ La escasez de países en rangos intermedios (30-60 puntos) es particularmente pr
 
 \end{multicols}
 
-```{r tabla8, echo=FALSE}
-datos <- read.csv("AI_index_db.csv")
+```{r tabla9, echo=FALSE}
 
 # Crear intervalos para la variable Talent
 intervalos <- cut(datos$Talent, breaks = seq(0, 100, by = 10), 
@@ -931,7 +927,7 @@ knitr::kable(tabla_frecuencias_talent,
 
 \\
 
-```{r tabla9, echo=FALSE, results='asis'}
+```{r tabla10, echo=FALSE, results='asis'}
 
 #Generación de la tabla
 crear_intervalos <- function(data, variable, n_bins = 8) {
@@ -1091,7 +1087,7 @@ $\alpha$/2 = 0.025\\
 Z~$\alpha$/2~ = ± `r zalfa2`\\
 Márgen de error = Z~$\alpha$/2~ * s/√n\\
 Márgen de error = `r zalfa2` * `r dResearch`/√30\\
-IC = (x̄ ± Márgen de error\\
+IC = (x̄ ± Márgen de error)\\
 IC = (`r m1`,  `r m2`)\\
 
 El intérvalo presentado indica que con una probabilidad del 95\%, la media de la población se encuentra entre `r m1` y `r m2`.
@@ -1128,7 +1124,6 @@ Z = ( `r mResearch` - 20)/(`r dResearch`/√30)\\
 Z = `r z1`\\
 
 Paso 4.
-
 Z crítico = Z(1 - $\alpha$)\\
 Z crítico = `r z_crit`\\
 
@@ -1217,7 +1212,7 @@ ESPACIO PARA DOS POBLACIONES (seguir el mismo formato)
 
 \section{Modelo de regresión lineal}
 
-Con el objetivo de determinar la influencia de los factores relacionados con la innovación mediante el índice Research en el desarrollo de la IA, se busca plantear un modelo de regresión lineal [5]. Para esto, se debe establecer la presencia de una relación lineal significativa (con un coeficiente de correlación lineal de Pearson $≥$ a 0.6 o $≤$ a -0.6) y visualizar la relación en un diagrama de disperción.
+Con el objetivo de determinar la influencia de los factores relacionados con la innovación mediante el índice Research en el desarrollo de la IA, se busca plantear un modelo de regresión lineal [5] simple. Para esto, se debe establecer la presencia de una relación lineal significativa (con un coeficiente de correlación lineal de Pearson $≥$ a 0.6 o $≤$ a -0.6) y visualizar la relación en un diagrama de disperción.
 
 ```{r corrResearch}
 
@@ -1263,7 +1258,7 @@ ggsave("figura11.png", plot = grafico_dispersion, width = 8, height = 6, dpi = 3
 \includegraphics[width=\linewidth]{figura11.png}
 \end{center}
 
-Figura 11. Disperción de los datos del índice Research y el índice Total Score
+Figura 11. Disperción de los datos del índice Research y el índice Total Score.
 
 Las variables del modelo serán el índice Research (variable independiente X) y Total Score (variable dependiente Y). El modelo de regresión lineal es de la forma y = ßo + ß1X + $\epsilon$, donde ß0 es la ordenada de origen de la línea, ß1 es la pendiente de la línea y $\epsilon$ es un componente error aleatorio.
 
@@ -1308,18 +1303,34 @@ Y = ßo + ß1X + $\epsilon$\\
 Y = `r b0` + `r b1`* X + $\epsilon$\\
 Total Score = `r b0` + `r b1` * Research + $\epsilon$\\
 
-Para determinar la bondad del modelo se utiliza el coeficiente de determinación $R^2$ el cuál mide la exactitud de las predicciones que produce el modelo de regresión lineal, además, el coeficiente de determinación ajustado $R^2_{A}$ considera también la relación del número de parámetros con el número de datos, haciendolo más adecuado para establecer la bondad de las predicciones. A memdida que el valor de $R^2_{A}$ se acerca más a 1 se considera que el modelo es más preciso. En este caso, $R^2_{A}$ es `r Raj`, por lo que el `r rp`\% de la variabilidad de las predicciones de Total Score pueden ser explicadas con el molode de regresión con la variable Research.
+Para determinar la bondad del modelo se utiliza el coeficiente de determinación $R^2$ el cuál mide la exactitud de las predicciones que produce el modelo de regresión lineal, además, el coeficiente de determinación ajustado $R^2_{A}$ considera también la relación del número de parámetros con el número de datos, haciendolo más adecuado para establecer la bondad de las predicciones. A memdida que el valor de $R^2_{A}$ se acerca más a 1 se considera que el modelo es más preciso. En este caso, $R^2_{A}$ es `r Raj`, por lo que el `r rp`\% de la variabilidad de las predicciones de Total Score pueden ser explicadas con el modelo de regresión con la variable Research.
 
-```{r estadisticos, echo=FALSE, results='asis'}
+```{r estadisticos}
 
-cat("$R^2$: ", round(r_squared, 4), "\n\n")
-cat("$R^2$ Ajustado: ", round(adj_r_squared, 4), "\n\n")
-cat("Estadístico F: ", round(f_stat[1], 2), " con ", f_stat[2], " y ", f_stat[3], " grados de libertad\n\n")
-cat("Valor p: ", format.pval(p_value, digits = 4), "\n\n")
+rc <- round(r_squared, 4)
+ra <-round(adj_r_squared, 4)
+f <- round(f_stat[1], 2)
+f1 <- f_stat[2]
+f2 <- f_stat[3]
+p <- format.pval(p_value, digits = 4)
 
 ```
 
-Lo supuestos respecto a $\epsilon$ son: los errores $\epsilon$i son aleatorios e independientes lo cuál puede ser comprobado con un diagrama de disperción de los residuos
+$R^2$ = `r rc`\\
+$R^2_{A}$ = `r ra`\\
+Estadístico F = `rf` con `r f1` y `r f2` grados de libertad\\
+Valor p = `r p`
+
+Hay 4 supuestos respecto a $\epsilon$ [6] del modelo de regrersión lineal que se deben cumplir para verificar la validez de las predicciones del modelo, estos supuestos son: 
+
+\begin{enumerate} [itemsep=0pt, parsep=0pt]
+\item Los errores $\epsilon$i son aleatorios e independientes.
+\item La media de la distribución de probabilidad de  $\epsilon$ es 0.
+\item La varianza de la distribución de probabilidad de  $\epsilon$ es constante para todos los valores de la variable independiente X (índice Research).
+\item Los  $\epsilon$i están distribuidos normalmente.
+\end{enumerate}
+
+Para comprobar el primer supuesto, en la figura 12 se presenta un diagrama de disperción de los residuos de los pronósticos para Total Score, donde se evidencia que estos no mantienen una relación evidente entre sí, de tal manera que se cumple el supuesto 1.
 
 ```{r figura12, echo=FALSE, warning=FALSE, message=FALSE}
 
@@ -1335,7 +1346,7 @@ grafico_residuos <- ggplot(df_residuos, aes(x = Ajustados, y = Residuos)) +
   geom_hline(yintercept = 0, linetype = "dashed", color = "darkred", size = 1) +
   
   labs(
-    x = "Valores ajustados",
+    x = "Predicciones del modelo",
     y = "Residuos",
   ) +
   
@@ -1353,7 +1364,129 @@ ggsave("figura12.png", plot = grafico_residuos, width = 8, height = 6, dpi = 300
 \includegraphics[width=\linewidth]{figura12.png}
 \end{center}
 
-el siguiente supuesto indica que la media de la distribución de probabilidad de $\epsilon$ es 0, lo cuá
+Figura 12. Disperción de los residuos de los pronósticos de Total Score.
+
+```{r mmediaE}
+
+mResiduos <- mean(residuals(regresion))
+mrResiduos <- round(mean(residuals(regresion)), 6)
+
+```
+
+Para comporbar el segundo supuesto, se calculó la media de la distribución de probabilidad de $\epsilon$, esta es de `r mResiduos`, la cuál redondeada a 6 decimales es de aproximadamente `r mrResiduos`.
+
+Para comprobar el tercer supuesto Homocedasticidad [7], en la Tabla 12 se plantea el análisis de varianza ANOVA, con el cual se buscará probar la hipótesis: existe una relación lineal significativa entre el índice Research y Total Score.
+
+```{r anova}
+
+anova_results <- anova(regresion)
+
+gl_regression <- 1
+gl_error <- nrow(datos) - 2
+gl_total <- nrow(datos) - 1
+
+SSR <- anova_results["datos$Research", "Sum Sq"]
+SSE <- anova_results["Residuals", "Sum Sq"]
+SST <- SSR + SSE
+MSR <- SSR / gl_regression
+MSE <- SSE / gl_error
+F_value <- anova_results["datos$Research", "F value"]
+p_value <- anova_results["datos$Research", "Pr(>F)"]
+r_squared <- SSR / SST
+adj_r_squared <- 1 - (SSE/gl_error)/(SST/gl_total)
+
+tabla_anova <- data.frame(
+  Fuente = c("Regresión", "Error (residuo)", "Total"),
+  GL = c(gl_regression, gl_error, gl_total),
+  SC = c(round(SSR, 2), round(SSE, 2), round(SST, 2)),
+  CM = c(round(MSR, 2), round(MSE, 2), NA),
+  F = c(round(F_value, 2), NA, NA),
+  Valor_P = c(format.pval(p_value, digits = 4), NA, NA)
+)
+
+fValue <- round(F_value, 2)
+pValue <- round(p_value, 4)
+
+```
+
+
+n = 62\\
+Paso 1.\\
+Ho: ß1 = 0\\
+Ha: ß1 $≠$ 0\\
+
+Paso 2.\\
+$\alpha$ = 0.05
+
+Paso 3.\\
+F = `r F_value`\\
+```{r prueba_hipotesis, include=FALSE}
+diferencia <- 0.05 - p_value
+```
+Paso 4.\\
+Valor p = `r p_value`\\
+alfa - Valor p = `r diferencia`\\
+Valor p < $\alpha$
+
+Paso 5.
+Con una significancia de 0.05, se rechaza la hipótesis nula ya que el Valor p `r p_value` es menor a  $\alpha$, por lo tanto se concluye ß1 $≠$ 0 y por lo tanto existe una relación lineal significativa entre el índice Research y Total Score.
+
+
+\end {multicols}
+
+```{r tabla12, echo=FALSE, results='asis'}
+
+# Ajuste del diseño de la tabla (añade estas líneas)
+cat("\\renewcommand{\\arraystretch}{1.3}\n")
+cat("\\begin{footnotesize}")
+knitr::kable(tabla_anova, 
+             caption = "Análisis de Varianza (ANOVA) para el Modelo de Regresión Lineal", 
+             format = "latex", 
+             booktabs = TRUE, 
+             longtable = TRUE,  
+             float = FALSE,    
+             col.names = c("Fuente de Variación", "Grados de Libertad", "Suma de Cuadrados", "Cuadrado medio", "F", "Valor P"),
+             align = c('l', 'c', 'r', 'r', 'r', 'r'))
+cat("\\end{footnotesize}")
+cat("\\renewcommand{\\arraystretch}{1}\n")
+
+```
+
+\begin{multicols}{2}
+
+Al comprobar la hipítesis planteada: existe una relación lineal significativa entre el índice Research y Total Score, utilizando el análisis de varianza ANOVA para el mdelo de regresión lineal, se determina el cumplimiento del tercer supuesto del modelo
+
+En la figura 13 se presenta la distribución de los residuos de los pronósticos de Total Score para comprobar el cuarto supuesto. Se observa que aunque no se muestran asimetrías muy significativas, la distribución presenta dos picos en los residuos (distribución bimodal) de manera que el supuesto de normalidad no se cumple estrictamente, sin embargo de manera general hay una distribución con similutud significativa a la curva normal.
+
+```{r figura13, echo=FALSE, message=FALSE, warning=FALSE}
+
+residuos <- residuals(regresion)
+
+histograma_simple <- ggplot(data.frame(residuos), aes(x = residuos)) +
+    geom_histogram(bins = 15, fill = "steelblue", color = "white", alpha = 0.7) +
+   geom_density(aes(y = ..density.. * length(residuos) * (diff(range(residuos))/15)), 
+              color = "darkred", size = 1, linetype = "solid") +
+    labs(x = "Residuos",
+       y = "Frecuencia Absoluta") +
+  
+  theme_minimal() +
+  theme(
+    axis.text = element_text(size = 9),
+    panel.grid.minor = element_blank()
+  )
+
+ggsave("figura13.png", plot = histograma_simple, width = 8, height = 6, dpi = 300)
+
+```
+\begin{center}
+\includegraphics[width=\linewidth]{figura13.png}
+\end{center}
+
+Figura 13. Distribución los residuos de los pronósticos de Total Score.
+
+Teniendo en cuenta los resultados de la comprobación de los supuestos, en primera instancia, se observa gráficamente y se identifica a través del coeficiente de correlación lineal de Pearson que hay una relación lineal muy significativa de `r cResearch` entre las variables índice Research y total socore. Por otro lado, la bondad del modelo medida por el coeficiente de determinación es de `r Raj`, valor que brinda una alta confiabilidad a las predicciones del modelo, indicando que el `r rp`\% de la variabilidad de las predicciones de Total Score pueden ser explicadas con el modelo de regresión con la variable Research. Finalmente debido al cumplimiento de los supuestos probado anteriormente, puede considerarse fiable pronosticar con el modelo construido.
+
+ESPACIO PARA MODELO DE REGRESIÓN LINEAL MÚLTIPLE (seguir mismo formato)
 
 \section{Conclusiones}
 
